--- a/BubbleSort/BubbleSort.vcxproj.filters
+++ b/BubbleSort/BubbleSort.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BubbleSort.cpp">
+    <ClCompile Include="BubbleSort_BinarySearch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
